package src;

public class Guest {

}
