package src;

public class Receptionist {

}
